--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2022-12-18 21:34 UTC\n"
-"PO-Revision-Date: 2022-12-18 23:56+0100\n"
+"POT-Creation-Date: 2022-12-19 15:54 UTC\n"
+"PO-Revision-Date: 2022-12-19 16:56+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -619,7 +619,7 @@ msgstr "locura"
 #. [display]: id=insanity_display
 #: Non_Fatal_Wounds_Extended\utils\Wounds.cfg:746
 msgid "Melee attacks gain berserk."
-msgstr "Ataques melé adquieren berserker"
+msgstr "Ataques melé adquieren berserker."
 
 #. [berserk]: id=nfwme_berserk
 #: Non_Fatal_Wounds_Extended\utils\Wounds.cfg:757
@@ -1013,8 +1013,8 @@ msgid ""
 "wounded with impact attack\n"
 "* <i>Burned</i> (-30% fire resistance) > All units, wounded with fire attack "
 "or on a terrain with lava or fire\n"
-"* <i>Captured</i> (increased recall cost based on level) > All units, "
-"random\n"
+"* <i>Captured</i> (increased recall cost based on level) > All units, random "
+"but on leaders and heroes is much more probable\n"
 "* <i>Concussion</i> (-20% magical damage) > Units with magical attacks, "
 "random\n"
 "* <i>Wild magic</i> (magical attacks now are 50% chance) > Units with "
@@ -1055,7 +1055,7 @@ msgstr ""
 "* <i>Quemado</i> (-30% resistencia al fuego) > Todas las unidades, herido "
 "con ataque de fuego o en un terreno con lava o fuego\n"
 "* <i>Capturado</i> (coste de reincorporación aumentado según el nivel) > "
-"Todas las unidades, azar\n"
+"Todas las unidades, azar pero mucho más probable en líderes y héroes\n"
 "* <i>Conmoción</i> (-20% daño mágico) > Unidades con ataques mágicos, azar\n"
 "* <i>Magia salvaje</i> (los ataques mágicos ahora tienen un 50 % de "
 "probabilidad) > Unidades con ataques mágicos, azar\n"
