--- a/translations/wesnoth-Non_Fatal_Wounds/wesnoth-Non_Fatal_Wounds.pot
+++ b/translations/wesnoth-Non_Fatal_Wounds/wesnoth-Non_Fatal_Wounds.pot
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2022-12-18 21:34 UTC\n"
+"POT-Creation-Date: 2022-12-19 15:54 UTC\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -871,7 +871,7 @@ msgid ""
 "* <i>Broken leg</i> (-20% mp) > Races with legs, random\n"
 "* <i>Broken rib</i> (-30% impact resistance) > Not mechanical or spirits, wounded with impact attack\n"
 "* <i>Burned</i> (-30% fire resistance) > All units, wounded with fire attack or on a terrain with lava or fire\n"
-"* <i>Captured</i> (increased recall cost based on level) > All units, random\n"
+"* <i>Captured</i> (increased recall cost based on level) > All units, random but on leaders and heroes is much more probable\n"
 "* <i>Concussion</i> (-20% magical damage) > Units with magical attacks, random\n"
 "* <i>Wild magic</i> (magical attacks now are 50% chance) > Units with magical attacks, random\n"
 "* <i>Coward</i> (-15% accuracy) > Not mechanical, random\n"
