--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2022-12-19 15:54 UTC\n"
-"PO-Revision-Date: 2022-12-19 16:56+0100\n"
+"PO-Revision-Date: 2022-12-19 23:34+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1209,15 +1209,15 @@ msgid ""
 msgstr ""
 "<b>Lista de heridas:</b>\n"
 "* Muerte (muerte definitiva)\n"
-"* Convertirse en fantasma: -40% HP, movimiento tipo espíritu, defensas y "
-"resistencias, alineación caótica, ataque a distancia cambiado a frío si no "
+"* Convertirse en fantasma: -40% HP, movimiento, defensas y resistencias de "
+"tipo espíritu, alineación caótica, ataque a distancia cambiado a frío si no "
 "es mágico, arcano o fuego, ataque cuerpo a cuerpo cambiado a arcano y con "
 "drenaje si no es mágico, frío o fuego > Unidades que aún no son espíritus o "
 "fantasmas\n"
 "* Convertirse en zombi: -20 % de vida, más lento, baja resistencia arcana, "
-"alineamiento caótico, plaga cuerpo a cuerpo, -50 % de daño de ataques "
-"mágicos, -25 % de daño de ataques a distancia y mala puntería en tiradores > "
-"Unidades que aún no son muertos vivientes"
+"alineación caótica, plaga cuerpo a cuerpo, -50 % de daño de ataques mágicos, "
+"-25 % de daño de ataques a distancia y mala puntería en tiradores > Unidades "
+"que aún no son muertos vivientes"
 
 #. [option]
 #: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:183
