--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2022-12-22 04:43 UTC\n"
-"PO-Revision-Date: 2022-12-22 06:05+0100\n"
+"POT-Creation-Date: 2022-12-24 01:57 UTC\n"
+"PO-Revision-Date: 2022-12-24 03:03+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1080,11 +1080,11 @@ msgid ""
 "* <i>Broken wing</i> (-20% mp) > Races with wings, random\n"
 "* <i>Broken leg</i> (-20% mp) > Races with legs, random\n"
 "* <i>Broken rib</i> (-30% impact resistance) > Not mechanical or spirits, "
-"wounded with impact attack\n"
+"random but more probable with impact attack\n"
 "* <i>Burn</i> (-30% fire resistance) > All units, wounded with fire attack "
 "or on a terrain with lava or fire\n"
 "* <i>Capture</i> (increased recall cost based on level) > All units, random "
-"but on leaders and heroes is much more probable\n"
+"but more probable on leaders and heroes\n"
 "* <i>Concussion</i> (-20% magical damage) > Units with magical attacks, "
 "random\n"
 "* <i>Wild magic</i> (magical attacks now are 50% chance) > Units with "
@@ -1102,10 +1102,10 @@ msgid ""
 "attack or on a cold terrain\n"
 "* <i>Gash</i> (-30% blade resistance) > All units, wounded with blade "
 "attack\n"
-"* <i>Infection</i> (10% chance to be poisoned every turn) > Not mechanical "
-"or not unpoisonable, random\n"
+"* <i>Infection</i> (10% chance to be poisoned every turn) > Not "
+"unpoisonable, random but more probable if poisoned\n"
 "* <i>Sickness</i> (20% chance of being slowed every turn) > All units, "
-"random\n"
+"random but more probable if slowed\n"
 "* <i>Insanity</i> (berserk on melee attacks) > Units without berserk "
 "ability\n"
 "* <i>Mutilation</i> (-20% hp) > All units, random\n"
@@ -1124,11 +1124,11 @@ msgstr ""
 "* <i>Ala rota</i> (-20% movimiento) > Razas con alas, azar\n"
 "* <i>Pierna rota</i> (-20% movimiento) > Razas con piernas, azar\n"
 "* <i>Costilla rota</i> (-30% resistencia al impacto) > No mecánico ni "
-"espíritus, herido con ataque de impacto\n"
+"espíritus, aleatorio pero más probable con ataques de impacto\n"
 "* <i>Quemadura</i> (-30% resistencia al fuego) > Todas las unidades, herido "
 "con ataque de fuego o en un terreno con lava o fuego\n"
 "* <i>Captura</i> (coste de reincorporación aumentado según el nivel) > Todas "
-"las unidades, azar pero mucho más probable en líderes y héroes\n"
+"las unidades, azar pero más probable en líderes y héroes\n"
 "* <i>Conmoción</i> (-20% daño mágico) > Unidades con ataques mágicos, azar\n"
 "* <i>Magia salvaje</i> (los ataques mágicos ahora tienen un 50 % de "
 "probabilidad) > Unidades con ataques mágicos, azar\n"
