--- a/translations/wesnoth-Non_Fatal_Wounds/wesnoth-Non_Fatal_Wounds.pot
+++ b/translations/wesnoth-Non_Fatal_Wounds/wesnoth-Non_Fatal_Wounds.pot
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2022-12-22 04:43 UTC\n"
+"POT-Creation-Date: 2022-12-24 01:57 UTC\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -936,9 +936,9 @@ msgid ""
 "* <i>Broken arm</i> (-20% non-magical damage) > Races with arms, random\n"
 "* <i>Broken wing</i> (-20% mp) > Races with wings, random\n"
 "* <i>Broken leg</i> (-20% mp) > Races with legs, random\n"
-"* <i>Broken rib</i> (-30% impact resistance) > Not mechanical or spirits, wounded with impact attack\n"
+"* <i>Broken rib</i> (-30% impact resistance) > Not mechanical or spirits, random but more probable with impact attack\n"
 "* <i>Burn</i> (-30% fire resistance) > All units, wounded with fire attack or on a terrain with lava or fire\n"
-"* <i>Capture</i> (increased recall cost based on level) > All units, random but on leaders and heroes is much more probable\n"
+"* <i>Capture</i> (increased recall cost based on level) > All units, random but more probable on leaders and heroes\n"
 "* <i>Concussion</i> (-20% magical damage) > Units with magical attacks, random\n"
 "* <i>Wild magic</i> (magical attacks now are 50% chance) > Units with magical attacks, random\n"
 "* <i>Cowardice</i> (-15% accuracy) > Not mechanical, random\n"
@@ -948,8 +948,8 @@ msgid ""
 "* <i>Fear of fog</i> (-40% mp when fog is active) > Not mechanical, wounded with fog active\n"
 "* <i>Frostbite</i> (-30% cold resistance) > All units, wounded with ice attack or on a cold terrain\n"
 "* <i>Gash</i> (-30% blade resistance) > All units, wounded with blade attack\n"
-"* <i>Infection</i> (10% chance to be poisoned every turn) > Not mechanical or not unpoisonable, random\n"
-"* <i>Sickness</i> (20% chance of being slowed every turn) > All units, random\n"
+"* <i>Infection</i> (10% chance to be poisoned every turn) > Not unpoisonable, random but more probable if poisoned\n"
+"* <i>Sickness</i> (20% chance of being slowed every turn) > All units, random but more probable if slowed\n"
 "* <i>Insanity</i> (berserk on melee attacks) > Units without berserk ability\n"
 "* <i>Mutilation</i> (-20% hp) > All units, random\n"
 "* <i>Necrosis</i> (-30% arcane resistance) > Not mechanical, random\n"
