Fixed fog, capture, and character error on 1.16

--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2022-12-24 05:24 UTC\n"
-"PO-Revision-Date: 2022-12-24 06:31+0100\n"
+"PO-Revision-Date: 2022-12-24 10:25+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1171,7 +1171,7 @@ msgstr ""
 "* <i>Tajo</i> (-30 % de resistencia de hoja) > Todas las unidades, herido "
 "con ataque de filo\n"
 "* <i>Infección</i> (10% de probabilidad de ser envenenado cada turno) > No "
-"mecánico o no envenenable, azar\n"
+"inmune al veneno, azar\n"
 "* <i>Enfermedad</i> (20 % de probabilidad de ser ralentizado cada turno) > "
 "Todas las unidades, azar\n"
 "* <i>Locura</i> (frenesí en ataques cuerpo a cuerpo) > Unidades sin "
@@ -1246,6 +1246,8 @@ msgstr ""
 "un oponente que posea el arma al que la unidad teme.\n"
 "* <i>Miedo a la luz/oscuridad</i>: 5% de probabilidad de recuperación al "
 "derrotar a un oponente durante el día/la noche.\n"
+"* <i>Miedo a la niebla</i>: 5% de probabilidad de recuperación al derrotar a "
+"un oponente cuando la niebla esta activa.\n"
 "* <i>Cobardía</i>: 20% de probabilidad de recuperación al derrotar a un "
 "enemigo 1 nivel superior o en su nivel más alto.\n"
 "* <i>Pérdida de memoria</i>: es una herida de 1 uso y se cura "
