--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2022-12-24 05:24 UTC\n"
-"PO-Revision-Date: 2022-12-26 03:43+0100\n"
+"PO-Revision-Date: 2022-12-27 05:11+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1251,8 +1251,8 @@ msgstr ""
 "* <i>Captura</i>: es una herida de 1 uso y se cura cuando se paga el rescate "
 "de reincorporación por primera vez.\n"
 "* El resto de heridas se pueden curar eligiendo un AMLA de recuperación en "
-"lugar del AMLA de avance o por defecto (todavía se puede avanzar más tarde "
-"al siguiente avance).\n"
+"lugar del avance o AMLA por defecto (todavía se puede avanzar más tarde al "
+"siguiente avance).\n"
 "* Las heridas opcionales no se pueden curar en absoluto."
 
 #. [option]
