Fear of Weapon buff

--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2023-01-01 06:50 UTC\n"
-"PO-Revision-Date: 2023-01-01 07:53+0100\n"
+"POT-Creation-Date: 2023-01-01 07:27 UTC\n"
+"PO-Revision-Date: 2023-01-01 08:28+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1324,8 +1324,8 @@ msgid ""
 "Units that are not already spirits or ghosts\n"
 "* <i>Turning into a zombie</i>: -30% HP, -25% general attack damage, -25% "
 "movement, -50% magical attacks strikes, low arcane resistance, chaotic "
-"alignment, plague on melee, and poor markmanship on marksmans > Units that "
-"are not already undead"
+"alignment and fearless, plague on melee, and poor markmanship on marksmans > "
+"Units that are not already undead"
 msgstr ""
 "<b>Lista de heridas:</b>\n"
 "* <i>Muerte</i> (muerte definitiva)\n"
@@ -1336,8 +1336,8 @@ msgstr ""
 "mágico, frío o fuego > Unidades que aún no son espíritus o fantasmas\n"
 "* <i>Convertirse en zombi</i>: -30 % PV, -20% daño de ataque general, -25% "
 "movimiento, -50 % golpes mágicos, baja resistencia arcana, alineación "
-"caótica, plaga cuerpo a cuerpo y mala puntería en tiradores > Unidades que "
-"aún no son muertos vivientes"
+"caótica e intrépido, plaga cuerpo a cuerpo y mala puntería en tiradores > "
+"Unidades que aún no son muertos vivientes"
 
 #. [option]
 #: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:185
