--- a/translations/wesnoth-Non_Fatal_Wounds/wesnoth-Non_Fatal_Wounds.pot
+++ b/translations/wesnoth-Non_Fatal_Wounds/wesnoth-Non_Fatal_Wounds.pot
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2023-01-01 06:50 UTC\n"
+"POT-Creation-Date: 2023-01-01 07:27 UTC\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1083,7 +1083,7 @@ msgid ""
 "<b>Wounds list:</b>\n"
 "* <i>Death</i> (definitive death)\n"
 "* <i>Turning into a ghost</i>: -50% HP; -20% general attack damage; spirit type movement, defenses and resistances; chaotic alignment; ranged attack changed to cold if not magical, arcane or fire; melee attack changed to arcane, with drain, and with -25% damage if not magical, cold or fire > Units that are not already spirits or ghosts\n"
-"* <i>Turning into a zombie</i>: -30% HP, -25% general attack damage, -25% movement, -50% magical attacks strikes, low arcane resistance, chaotic alignment, plague on melee, and poor markmanship on marksmans > Units that are not already undead"
+"* <i>Turning into a zombie</i>: -30% HP, -25% general attack damage, -25% movement, -50% magical attacks strikes, low arcane resistance, chaotic alignment and fearless, plague on melee, and poor markmanship on marksmans > Units that are not already undead"
 msgstr ""
 
 #. [option]
