--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2023-01-01 21:47 UTC\n"
-"PO-Revision-Date: 2023-01-01 22:53+0100\n"
+"PO-Revision-Date: 2023-01-02 02:43+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -29,8 +29,8 @@ msgid ""
 "your recall list.\n"
 "\n"
 "This does not apply to any unit that the objectives require you to keep "
-"alive. Even if they say they’re only wounded, the enemy will give your "
-"heroes no chance."
+"alive. Even if they say they’re only wounded, the enemy will give your heroes "
+"no chance."
 msgstr ""
 "Las unidades que pierden toda su vida durante un escenario son heridas y "
 "pueden recuperarse en escenarios posteriores. Si eliges la posibilidad de "
@@ -59,8 +59,8 @@ msgid ""
 msgstr ""
 "Activar o desactivar heridas aleatorias. Si desactivas, las unidades "
 "desaparecerán sin mensaje, y volverán en el siguiente escenario sin cambios "
-"(salvo casos especiales). Si eliges permitir la pérdida de unidades "
-"plagadas, desaparecerán para siempre, al ser convertidas por el enemigo."
+"(salvo casos especiales). Si eliges permitir la pérdida de unidades plagadas, "
+"desaparecerán para siempre, al ser convertidas por el enemigo."
 
 #. [item]
 #. [option]
@@ -329,8 +329,8 @@ msgid ""
 "Captured units have a increased recall cost untill you recall them once "
 "(recall+(10xlevel))."
 msgstr ""
-"Las unidades capturadas tienen un coste incrementado cuando las recuperes "
-"por primera vez (reincorporación+(10*nivel))."
+"Las unidades capturadas tienen un coste incrementado cuando las recuperes por "
+"primera vez (reincorporación+(10*nivel))."
 
 #: Non_Fatal_Wounds_Extended\utils\Wounds.cfg:246
 msgid "Capture"
@@ -421,8 +421,8 @@ msgid ""
 "description|.\n"
 "Face your fears and defeat them to try to overcome them."
 msgstr ""
-"Golpes -1 y precisión -20% cuando se enfrenta a un enemigo con "
-"$second_weapon.description|.\n"
+"Golpes -1 y precisión -20% cuando se enfrenta a un enemigo con $second_weapon."
+"description|.\n"
 "Enfrenta tus miedos y véncelos para tratar de superarlos."
 
 #: Non_Fatal_Wounds_Extended\utils\Wounds.cfg:396
@@ -478,8 +478,7 @@ msgid ""
 "Scared of deserts. Movement points -2 on frozen and sand terrains.\n"
 "Face your fears to try to overcome them."
 msgstr ""
-"Miedo a los desiertos. Puntos de movimiento -2 en terrenos de arena e "
-"hielo.\n"
+"Miedo a los desiertos. Puntos de movimiento -2 en terrenos de arena e hielo.\n"
 "Enfrenta tus miedos para tratar de superarlos."
 
 #: Non_Fatal_Wounds_Extended\utils\Wounds.cfg:482
@@ -516,8 +515,7 @@ msgid ""
 "Scared of plants. Movement points -2 on forest and fungus terrains.\n"
 "Face your fears to try to overcome them."
 msgstr ""
-"Miedo a las plantas. Puntos de movimiento -2 en terrenos de bosque y "
-"hongos.\n"
+"Miedo a las plantas. Puntos de movimiento -2 en terrenos de bosque y hongos.\n"
 "Enfrenta tus miedos para tratar de superarlos."
 
 #: Non_Fatal_Wounds_Extended\utils\Wounds.cfg:537
@@ -589,8 +587,7 @@ msgid ""
 "Scared of fog. Movement points -40% when fog is enabled.\n"
 "Face your fears to try to overcome them."
 msgstr ""
-"Miedo a la niebla. Puntos de movimiento -40% cuando la niebla está "
-"activada.\n"
+"Miedo a la niebla. Puntos de movimiento -40% cuando la niebla está activada.\n"
 "Enfrenta tus miedos para tratar de superarlos."
 
 #: Non_Fatal_Wounds_Extended\utils\Wounds.cfg:650
@@ -760,8 +757,8 @@ msgstr "corte de papel"
 msgid ""
 "Due to the intense pain from your cut you cant concentrait on the fight.\n"
 "\n"
-"All damage is reduced by 20% and blade resistance is lowered by 30%. You "
-"will never recover from this."
+"All damage is reduced by 20% and blade resistance is lowered by 30%. You will "
+"never recover from this."
 msgstr ""
 "Debido al intenso dolor del corte, no puede concentrarse en la pelea.\n"
 "Todo el daño se reduce en un 20% y la resistencia a corte 30%. Nunca se "
@@ -822,8 +819,7 @@ msgstr "LEGO"
 #. [display]: id=lego_display
 #: Non_Fatal_Wounds_Extended\utils\Wounds.cfg:1041
 msgid ""
-"Due to the intense pain of stepping on plastic brick you cant walk "
-"properly.\n"
+"Due to the intense pain of stepping on plastic brick you cant walk properly.\n"
 "\n"
 "Movement is reduced by 20% and accuracy is reduced by 15%. You will never "
 "recover from this."
@@ -850,8 +846,8 @@ msgstr "drena"
 #. [drains]: id=drains
 #: Non_Fatal_Wounds_Extended\utils\Wounds.cfg:1161
 msgid ""
-"This unit drains health from living units, healing itself for half the "
-"amount of damage it deals (rounded down)."
+"This unit drains health from living units, healing itself for half the amount "
+"of damage it deals (rounded down)."
 msgstr ""
 "Esta unidad absorbe vida de unidades vivas, curándose la mitad del daño "
 "causado, redondeado hacia abajo."
@@ -958,15 +954,14 @@ msgstr "Avería"
 #: Non_Fatal_Wounds_Extended\utils\campaigns.cfg:52
 msgid ""
 "<b><i>Non-Fatal Wounds</i></b> modification is disabled for this scenario."
-msgstr ""
-"<b><i>Heridas No Fatales</i></b> se ha desactivado para este escenario."
+msgstr "<b><i>Heridas No Fatales</i></b> se ha desactivado para este escenario."
 
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended\utils\campaigns.cfg:74
 msgid ""
 "<b><i>Non-Fatal Wounds</i></b> modification might work unusually with this "
-"campaign. The recall lists change during the campaign, and units that are "
-"non-fatally wounded may reappear on the wrong recall list."
+"campaign. The recall lists change during the campaign, and units that are non-"
+"fatally wounded may reappear on the wrong recall list."
 msgstr ""
 "<b><i>Heridas No Fatales</i></b> podría funcionar mal en esta campaña. Las "
 "listas de recuperación cambian durante la campaña, y las unidades que no "
@@ -988,11 +983,11 @@ msgstr ""
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended\utils\campaigns.cfg:94
 msgid ""
-"<b><i>Non-Fatal Wounds:</i></b> As long as the Lich-Lord Lenvan is alive, "
-"all your dead units will rise as undead regardless of cause of death. Choose "
-"if you want to lose them all forever or you prefer to let chance decide. You "
-"can still irretrievably lose your units forever if you are attacked by a "
-"unit with plague."
+"<b><i>Non-Fatal Wounds:</i></b> As long as the Lich-Lord Lenvan is alive, all "
+"your dead units will rise as undead regardless of cause of death. Choose if "
+"you want to lose them all forever or you prefer to let chance decide. You can "
+"still irretrievably lose your units forever if you are attacked by a unit "
+"with plague."
 msgstr ""
 "<b><i>Heridas No Fatales:</i></b> mientras el liche Lord Lenvan esté vivo, "
 "todas las unidades que pierdas se levantarán como muertos vivientes "
@@ -1014,8 +1009,8 @@ msgstr "Continúa con el comportamiento normal de Heridas No Fatales"
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended\utils\campaigns.cfg:119
 msgid ""
-"<b><i>Non-Fatal Wounds:</i></b> As long as the Lich-Lord Jevyan is alive, "
-"all your dead units will rise as undead regardless of cause of death."
+"<b><i>Non-Fatal Wounds:</i></b> As long as the Lich-Lord Jevyan is alive, all "
+"your dead units will rise as undead regardless of cause of death."
 msgstr ""
 "<b><i>Heridas No Fatales:</i></b> Mientras el liche Lord Jevyan esté vivo, "
 "todas las unidades que pierdas se levantarán como muertos vivientes "
@@ -1034,10 +1029,10 @@ msgid ""
 "Costly Revenge, and for the story it’s meant to be costly to the elves as "
 "well as these innocent saurians."
 msgstr ""
-"<b><i>Heridas No Fatales:</i></b> en toda la línea principal de Wesnoth, "
-"este escenario es probablemente el acto más malvado por parte del jugador. "
-"El escenario se llama Costly Revenge, y para la historia está destinado a "
-"ser costoso tanto para los elfos como para estos inocentes saurios."
+"<b><i>Heridas No Fatales:</i></b> en toda la línea principal de Wesnoth, este "
+"escenario es probablemente el acto más malvado por parte del jugador. El "
+"escenario se llama Costly Revenge, y para la historia está destinado a ser "
+"costoso tanto para los elfos como para estos inocentes saurios."
 
 #. [option]
 #: Non_Fatal_Wounds_Extended\utils\campaigns.cfg:218
@@ -1068,8 +1063,7 @@ msgstr "Sólo en parte. Ella nunca tendría los poderes de un lich."
 #. [message]: speaker=Ras-Tabahn
 #: Non_Fatal_Wounds_Extended\utils\campaigns.cfg:286
 msgid ""
-"Maybe as a ghost, but even then she would no longer have the powers of a "
-"lich."
+"Maybe as a ghost, but even then she would no longer have the powers of a lich."
 msgstr ""
 "Tal vez como un fantasma, pero incluso entonces ya no tendría los poderes de "
 "un lich."
@@ -1098,8 +1092,7 @@ msgstr "Estado"
 
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:12
-msgid ""
-"(0 = Activated, 1 = Deactivated, 2 = Deactivated but with plague losses)"
+msgid "(0 = Activated, 1 = Deactivated, 2 = Deactivated but with plague losses)"
 msgstr ""
 "(0 = Activado, 1 = Desactivado, 2 = Desactivado pero con pérdidas por plaga)"
 
@@ -1111,8 +1104,8 @@ msgstr "Lista de Heridas"
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:22
 msgid ""
-"* <b><i>Wound</i> (effect) > Possible destination units, previous "
-"conditions</b>\n"
+"* <b><i>Wound</i> (effect) > Possible destination units, previous conditions</"
+"b>\n"
 "\n"
 "* <i>Amnesia</i> (loses 2 xp/turn) > All units, random\n"
 "* <i>Short-term memory loss</i> (resets experience) > Units with more than "
@@ -1122,14 +1115,14 @@ msgid ""
 "* <i>Broken leg</i> (-20% mp) > Races with legs, random\n"
 "* <i>Broken rib</i> (-30% impact resistance) > Not mechanical or spirits, "
 "random but more probable with impact attack\n"
-"* <i>Burn</i> (-30% fire resistance) > All units, wounded with fire attack "
-"or on a terrain with lava or fire\n"
+"* <i>Burn</i> (-30% fire resistance) > All units, wounded with fire attack or "
+"on a terrain with lava or fire\n"
 "* <i>Capture</i> (increased recall cost based on level) > All units, random "
 "but more probable on leaders and heroes\n"
 "* <i>Concussion</i> (-20% magical damage) > Units with magical attacks, "
 "random\n"
-"* <i>Wild magic</i> (magical attacks now are 50% chance) > Units with "
-"magical attacks, random\n"
+"* <i>Wild magic</i> (magical attacks now are 50% chance) > Units with magical "
+"attacks, random\n"
 "* <i>Cowardice</i> (-15% accuracy) > Not mechanical, random\n"
 "* <i>Fear of weapon</i> (reduced 1 strikes and -20% accuracy against what "
 "wounded them) > Not mechanical, wounded with any weapon\n"
@@ -1141,14 +1134,12 @@ msgid ""
 "with fog active\n"
 "* <i>Frostbite</i> (-30% cold resistance) > All units, wounded with ice "
 "attack or on a cold terrain\n"
-"* <i>Gash</i> (-30% blade resistance) > All units, wounded with blade "
-"attack\n"
-"* <i>Infection</i> (10% chance to be poisoned every turn) > Not "
-"unpoisonable, random but more probable if poisoned\n"
-"* <i>Sickness</i> (20% chance of being slowed every turn) > All units, "
-"random but more probable if slowed\n"
-"* <i>Insanity</i> (berserk on melee attacks) > Units without berserk "
-"ability\n"
+"* <i>Gash</i> (-30% blade resistance) > All units, wounded with blade attack\n"
+"* <i>Infection</i> (10% chance to be poisoned every turn) > Not unpoisonable, "
+"random but more probable if poisoned\n"
+"* <i>Sickness</i> (20% chance of being slowed every turn) > All units, random "
+"but more probable if slowed\n"
+"* <i>Insanity</i> (berserk on melee attacks) > Units without berserk ability\n"
 "* <i>Mutilation</i> (-20% hp) > All units, random\n"
 "* <i>Necrosis</i> (-30% arcane resistance) > Not mechanical, random\n"
 "* <i>Damage</i> (-5% mp, hp, damage and accuracy) > Mechanical, random\n"
@@ -1182,16 +1173,16 @@ msgstr ""
 "terreno en el que fue herido) > No mecánico, herido en ciertos terrenos\n"
 "* <i>Miedo a la niebla</i> (-40% movimiento cuando la niebla está activa) > "
 "No mecánico, herido con niebla activa\n"
-"* <i>Congelación</i> (-30 % resistencia al frío) > Todas las unidades, "
-"herido con ataque de hielo o en terreno frío\n"
-"* <i>Tajo</i> (-30 % de resistencia de hoja) > Todas las unidades, herido "
-"con ataque de filo\n"
+"* <i>Congelación</i> (-30 % resistencia al frío) > Todas las unidades, herido "
+"con ataque de hielo o en terreno frío\n"
+"* <i>Tajo</i> (-30 % de resistencia de hoja) > Todas las unidades, herido con "
+"ataque de filo\n"
 "* <i>Infección</i> (10% de probabilidad de ser envenenado cada turno) > No "
 "mecánico o no envenenable, azar\n"
 "* <i>Enfermedad</i> (20 % de probabilidad de ser ralentizado cada turno) > "
 "Todas las unidades, azar\n"
-"* <i>Locura</i> (frenesí en ataques cuerpo a cuerpo) > Unidades sin "
-"habilidad de frenesí\n"
+"* <i>Locura</i> (frenesí en ataques cuerpo a cuerpo) > Unidades sin habilidad "
+"de frenesí\n"
 "* <i>Mutilación</i> (-20 % PV) > Todas las unidades, azar\n"
 "* <i>Necrosis</i> (-30 % resistencia arcana) > No mecánico, azar\n"
 "* <i>Avería</i> (-5% movimiento, PV, daño y precisión) > Mecánico, azar\n"
@@ -1239,9 +1230,9 @@ msgid ""
 "while standing on the terrain unit is scared of.\n"
 "* <i>Fear of weapon</i>: 20% chance of recovery when defeating an opponent "
 "wielding the weapon the unit is scared of.\n"
-"* <i>Fear of light/dark</i>: 5% chance of recovery when defeating an "
-"opponent during the day/night.\n"
-"* <i>Fear of fog</i>: 5% chance of recovery when defeating an opponent when "
+"* <i>Fear of light/dark</i>: 5% chance of recovery when defeating an opponent "
+"during the day/night.\n"
+"* <i>Fear of fog</i>: 10% chance of recovery when defeating an opponent when "
 "fog is active.\n"
 "* <i>Cowardice</i>: 20% chance of recovery when defeat an enemy 1 level "
 "higher or at his highest level.\n"
@@ -1256,13 +1247,13 @@ msgid ""
 msgstr ""
 "<b>Curación de heridas:</b>\n"
 "\n"
-"* <i>Miedo al terreno</i>: 10 % de probabilidad de recuperación al derrotar "
-"a un oponente mientras la unidad está en el terreno al que tiene miedo.\n"
-"* <i>Miedo al arma</i>: 20 % de probabilidad de recuperación al derrotar a "
-"un oponente que posea el arma al que la unidad teme.\n"
+"* <i>Miedo al terreno</i>: 10 % de probabilidad de recuperación al derrotar a "
+"un oponente mientras la unidad está en el terreno al que tiene miedo.\n"
+"* <i>Miedo al arma</i>: 20 % de probabilidad de recuperación al derrotar a un "
+"oponente que posea el arma al que la unidad teme.\n"
 "* <i>Miedo a la luz/oscuridad</i>: 5% de probabilidad de recuperación al "
 "derrotar a un oponente durante el día/la noche.\n"
-"* <i>Miedo a la niebla</i>: 5% de probabilidad de recuperación al derrotar a "
+"* <i>Miedo a la niebla</i>: 10% de probabilidad de recuperación al derrotar a "
 "un oponente cuando la niebla esta activa.\n"
 "* <i>Cobardía</i>: 20% de probabilidad de recuperación al derrotar a un "
 "enemigo 1 nivel superior o en su nivel más alto.\n"
@@ -1323,8 +1314,8 @@ msgid ""
 "* <i>Turning into a ghost</i>: -50% HP; -20% general attack damage; spirit "
 "type movement, defenses and resistances; chaotic alignment; ranged attack "
 "changed to cold if not magical, arcane or fire; melee attack changed to "
-"arcane, with drain, and with -25% damage if not magical, cold or fire > "
-"Units that are not already spirits or ghosts\n"
+"arcane, with drain, and with -25% damage if not magical, cold or fire > Units "
+"that are not already spirits or ghosts\n"
 "* <i>Turning into a zombie</i>: -30% HP, -25% general attack damage, -25% "
 "movement, -50% magical attacks strikes, low arcane resistance, chaotic "
 "alignment and fearless, plague on melee, and poor markmanship on marksmans > "
@@ -1337,10 +1328,10 @@ msgstr ""
 "ataque a distancia cambiado a frío si no es mágico, arcano o fuego; ataque "
 "cuerpo a cuerpo cambiado a arcano, con drenaje y un -25% de daño si no es "
 "mágico, frío o fuego > Unidades que aún no son espíritus o fantasmas\n"
-"* <i>Convertirse en zombi</i>: -30 % PV, -20% daño de ataque general, -25% "
-"movimiento, -50 % golpes mágicos, baja resistencia arcana, alineación "
-"caótica e intrépido, plaga cuerpo a cuerpo y mala puntería en tiradores > "
-"Unidades que aún no son muertos vivientes"
+"* <i>Convertirse en zombi</i>: -30 % PV, -25% daño de ataque general, -25% "
+"movimiento, -50 % golpes mágicos, baja resistencia arcana, alineación caótica "
+"e intrépido, plaga cuerpo a cuerpo y mala puntería en tiradores > Unidades "
+"que aún no son muertos vivientes"
 
 #. [option]
 #: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:185
@@ -1366,8 +1357,8 @@ msgid ""
 "* <i>Stepping on a Lego</i> (-20% mp and -15% accuracy) > All units"
 msgstr ""
 "<b>Lista de heridas:</b>\n"
-"* <i>Corte de papel</i> (-20 % todos los daños y -30 % resistencia al filo) "
-"> Todas las unidades\n"
+"* <i>Corte de papel</i> (-20 % todos los daños y -30 % resistencia al filo) > "
+"Todas las unidades\n"
 "* <i>Pisó LEGO</i> (-20% movimiento y -15% precisión) > Todas las unidades"
 
 #. [option]
@@ -1403,11 +1394,11 @@ msgstr "Detener Heridas no fatales para este escenario"
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:371
 msgid ""
-"Are you sure? This cannot be undone. Non-Fatal Wounds will be activated "
-"again the next scenario."
+"Are you sure? This cannot be undone. Non-Fatal Wounds will be activated again "
+"the next scenario."
 msgstr ""
-"¿Estás seguro? Esto no se podrá deshacer. Heridas No Fatales será activado "
-"de nuevo en el siguiente escenario."
+"¿Estás seguro? Esto no se podrá deshacer. Heridas No Fatales será activado de "
+"nuevo en el siguiente escenario."
 
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:379
@@ -1472,8 +1463,8 @@ msgstr "¡Por favor, rescatadme...!"
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:182
 msgid ""
-"$unit.name a $nfwe_unit_type.name was captured by the enemy. You will have "
-"to pay a ransom."
+"$unit.name a $nfwe_unit_type.name was captured by the enemy. You will have to "
+"pay a ransom."
 msgstr ""
 "$unit.name, un $nfwe_unit_type.name, fue capturado por el enemigo. Tendrás "
 "que pagar un rescate."
